tests/pass/PostIncrement.java
package pass;

public class PostIncrement {
    public int postIncrement(String a){
        a++;
        return a;
    }
}