tests/fail/LessThan.java
package pass;

public class LessThan {
	
	public static void main(String[] args) {
        System.out.println("a" < 32);
    }
}